<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.aliyun.odps</groupId>
    <artifactId>spark-connector</artifactId>
    <version>4.0.1-odps0.56.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>common</module>
        <module>datasource</module>
    </modules>

    <properties>
        <odps.version>0.56.0</odps.version>
        <project.version>4.0.1-odps0.56.0</project.version>
        <arrow.version>17.0.0</arrow.version>
        <odps.sdk.version>0.56.0-public</odps.sdk.version>
        <odps.sdk.table.version>0.56.0-public</odps.sdk.table.version>
        <spark.version>4.0.1</spark.version>
        <scala.version>2.13.16</scala.version>
        <scala.binary.version>2.13</scala.binary.version>
        <java.version>17</java.version>
        <PermGen>512m</PermGen>
        <MaxPermGen>1024m</MaxPermGen>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest-funsuite_${scala.binary.version}</artifactId>
            <version>3.2.19</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>4.1.118.Final</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>4.9.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.codehaus.janino</groupId>
            <artifactId>janino</artifactId>
            <version>3.1.9</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.codehaus.janino</groupId>
            <artifactId>commons-compiler</artifactId>
            <version>3.1.9</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.8</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration combine.self="override">
                            <minimizeJar>false</minimizeJar>
                            <shadedArtifactAttached>false</shadedArtifactAttached>
                            <artifactSet>
                                <includes>
                                    <!-- Include here the dependencies you want to be packed in your
                                        fat jar -->
                                    <!-- for odps sdk -->
                                    <include>com.aliyun.odps:*</include>
                                    <include>org.aspectj:aspectjrt</include>
                                    <include>javax.mail:mail</include>
                                    <include>xpp3:xpp3</include>
                                    <include>org.lz4:lz4-pure-java</include>
                                    <include>net.sourceforge.javacsv:javacsv</include>
                                    <include>com.google.code.gson:gson</include>
                                    <!-- for credential and tea -->
                                    <include>com.aliyun:tea</include>
                                    <include>com.aliyun:tea-util</include>
                                    <include>com.aliyun:credentials-api</include>
                                    <include>com.aliyun:credxentials-java</include>
                                    <!-- for arrow -->
                                    <include>org.apache.arrow:*</include>
                                    <include>com.google.flatbuffers:*</include>
                                    <include>io.netty:netty-buffer</include>
                                    <include>io.netty:netty-common</include>
                                    <!-- for okhttp -->
                                    <include>com.squareup.okhttp3:*</include>
                                    <include>com.squareup.okio:*</include>
                                </includes>
                            </artifactSet>
                            <relocations>
                                <!-- TODO: // for arrow -->
                                <relocation>
                                    <pattern>org.apache.arrow</pattern>
                                    <shadedPattern>cupid_runtime.org.apache.arrow</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>io.netty</pattern>
                                    <shadedPattern>cupid_runtime.io.netty</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.google.flatbuffers</pattern>
                                    <shadedPattern>cupid_runtime.com.google.flatbuffers</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.google.gson</pattern>
                                    <shadedPattern>cupid_runtime.com.google.gson</shadedPattern>
                                </relocation>
                            </relocations>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                    <resource>reference.conf</resource>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <id>create-source-jar</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                            <goal>test-jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.17</version>
            </plugin>

            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>4.9.2</version>
                <executions>
                    <execution>
                        <id>scala-compile-first</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>scala-test-compile-first</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>attach-scaladocs</id>
                        <phase>site</phase>
                        <goals>
                            <goal>doc-jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <scalaVersion>${scala.version}</scalaVersion>
                    <recompileMode>incremental</recompileMode>

                    <args>
                        <arg>-unchecked</arg>
                        <arg>-deprecation</arg>
                        <arg>-feature</arg>
                    </args>
                    <jvmArgs>
                        <jvmArg>-Xms1024m</jvmArg>
                        <jvmArg>-Xmx1024m</jvmArg>
                        <jvmArg>-XX:MetaspaceSize=${PermGen}</jvmArg>
                        <jvmArg>-XX:MaxMetaspaceSize=${MaxPermGen}</jvmArg>
                    </jvmArgs>
                    <javacArgs>
                        <javacArg>-source</javacArg>
                        <javacArg>${java.version}</javacArg>
                        <javacArg>-target</javacArg>
                        <javacArg>${java.version}</javacArg>
                    </javacArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.6</version>
            </plugin>

        </plugins>
    </build>

</project>